ready for 1st launch!

--- a/layouts/faq/list.html
+++ b/layouts/faq/list.html
@@ -13,6 +13,7 @@
     <article>
       <h1 class="text-center">{{ .Title }}</h1>
       <h2 class="text-center h4" style="font-weight: normal" >{{ .Description }}</h2>
+      <p>This page is still under construction. You can visit the more complete older page <a href="/faqs/">here</a></p>
       <div class="text-center">{{ .Content }}</div>
 			<div class="card-list">
 				{{ $currentSection := .CurrentSection }}
