--- a/layouts/faq/single.html
+++ b/layouts/faq/single.html
@@ -40,10 +40,11 @@
       <ul>
         <li>Try the search box at the top of this page.</li>
         <li>Try the main <a href="/faq/">FAQ</a> page.</li>
-        <li>Share your issue on our <a target="_blank" href="https://github.com/speechnotes/speechnotes-website/issues">issues forum</a> on GitHub, as well as search for a similar issue already posted and perhaps solved.</li>
+        <li>Share your issue on our <a target="_blank" href="{{ .Site.Params.links.issues }}">issues forum</a> on GitHub, as well as search for a similar issue already posted and perhaps solved.</li>
         <li>Shoot us an email at <code>admin@speechlogger.com</code>.</li>
-        <li>Premium users may fill out the <a target="_blank" href="https://forms.gle/aEMroawC7shXGtWM8">following form</a> for premium support.</li>
-        <li>For suggestions, feature requests and other discussions, please join our <a target="_blank" href="https://github.com/speechnotes/speechnotes-website/discussions">discussions forum</a>.</li>
+        <li>Premium users may fill out the <a target="_blank" href="{{ .Site.Params.links.premiumSupportForm }}">following form for premium support</a>.</li>
+        <li>For suggestions, feature requests and other discussions, please join our <a target="_blank" href="{{ .Site.Params.links.discussions }}">discussions forum</a>.</li>
+        <li>More ways to get in touch with us on the <a href="/contact/">contact page</a>.</li>
       </ul>
 
 			<div class="page-footer-meta d-flex flex-column flex-md-row justify-content-between">
