published with better SEO & showing legacy & new previews

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,7 +30,7 @@
 </section>
 
 <div style="max-width: 95%; margin: 30px auto;width: 800px;text-align: center;">
-  <p>Need to read a webpage? Simply paste the URL of the page here and click play. Leave empty to read about the Beatles 🎸</p>
+  <p>Need to read a webpage? Simply paste its URL here & click play. Leave empty to read about the Beatles 🎸</p>
   <div style="display: flex; max-width: 800px;" >
     <input id="url_input_box" style="padding: 5px;display: inline-block;flex: 1;border-radius: 20px 0 0 20px;padding-left: 10px;" type="text" placeholder="https://en.wikipedia.org/wiki/The_Beatles" /><button style="border-radius: 0 20px 20px 0;" onclick="playUrl()">PLAY ▷</button>
   </div>
