--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -136,3 +136,20 @@ svg {
   border-right: 1px solid burlywood;
   cursor: pointer;
 }
+
+.videowrapper {
+  float: none;
+  clear: both;
+  width: 100%;
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  height: 0;
+}
+.videowrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
