--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -153,3 +153,10 @@ svg {
   width: 100%;
   height: 100%;
 }
+
+audio {
+  vertical-align: middle;
+  margin: 5px;
+  max-width: 100%;
+  min-width: 200px;
+}
