--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,14 +4,34 @@
   <div class="row justify-content-center">
     <div class="col-lg-12 text-center">
       <h1 class="mt-0">{{ .Title }}</h1>
-    </div>
-    <div class="col-lg-9 col-xl-8 text-center">
-      <h2 class="lead" style="font-size: 1.3em;">{{ .Params.lead | safeHTML }}</h2>
-      <br/>
       <p class="caption-top"><i>~ Proudly serving millions of users since 2015 ~</i></p>
+      <h2 class="lead" style="font-size: 1.3em;">{{ .Params.lead | safeHTML }}</h2>
+      <a style="display: block;width: 400px;margin: 40px auto;max-width: 100%;" class="btn btn-primary btn-lg px-4 mb-2" href="{{ .Site.Params.links.player }}" role="button" onclick="gtag('event', 'ttsreader_click_new_body', {'value': 'home_page_body'});">Get Started{{ i18n "start-dictating" }}</a>
+      <p class="meta"><a href="player/">Start text-to-speech</a> with our new player for free, or keep scrolling to learn more & see additional solutions.</p>
     </div>
+  </div>
+
+    <div class="row text-center" style="margin: 40px auto;">
+      <p style="font-size: 1.2em;">How good does it sound? Outstanding! Here are some examples</p>
+      <div class="col justify-content-center text-center">
+        <br/>
+        <p><i>Recorded on Edge browser</i></p>
+        <div>Christopher - <audio style="vertical-align: middle" controls src="https://ttsreader.com/player/audio/Christopher.mp3" preload="metadata"/></div>
+        <div>Michelle - &nbsp;&nbsp;&nbsp;&nbsp;<audio controls src="https://ttsreader.com/player/audio/Michelle.mp3" preload="metadata"/></div>
+      </div>
+      <div class="col justify-content-center text-center">
+        <br/>
+        <p><i>Recorded on Chrome browser</i></p>
+        <div>Noah - <audio controls src="https://ttsreader.com/player/audio/Noah.mp3" preload="metadata"></audio></div>
+        <div>Lily - &nbsp;&nbsp;<audio controls src="https://ttsreader.com/player/audio/Lily.mp3" preload="metadata"></audio></div>
+        <br/>
+      </div>
+
+    </div>
+
+
     <div class="row justify-content-center text-center" style="margin-top: 20px;">
-      <p class="quote">Select your preferred player to start ></p>
+      <p style="font-size: 1.2em">Additional Text-To-Speech Solutions ></p>
       <div class="col-md-7 col-lg-6 card">
         <a href="{{ .Site.Params.links.player }}"><div class="Player-preview-img-new" style=""></div></a>
         <h2 class="h4">New Player</h2>
